SuperSize: Fixed disassembly modal alignment.
Bug: 1308789
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3586307
Commit-Queue: Vigaash Sivasothy <vigaash@google.com>
Cr-Commit-Position: refs/heads/main@{#992542}

--- a/tools/binary_size/libsupersize/viewer/static/main.css
+++ b/tools/binary_size/libsupersize/viewer/static/main.css
@@ -241,7 +241,6 @@ ul {
 }
 
 .modal-content {
-  align-items: center;
   background-color: #fefefe;
   border-radius: 5px;
   box-sizing: border-box;
